[package]
name = "prism3-core"
version = "0.1.0"
edition = "2021"
authors = ["Hu Haixing <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/3-prism/prism3-rust-core"
description = "Foundational utilities and language-level tools for Rust application development"
homepage = "https://github.com/3-prism/prism3-rust-core"
documentation = "https://docs.rs/prism3-core"
readme = "README.md"
keywords = ["utility", "validation", "argument", "datatype", "prism3"]
categories = ["development-tools", "rust-patterns"]
exclude = [
    "coverage.sh",
    "COVERAGE.md",
    "COVERAGE.zh_CN.md",
]

[lib]
name = "prism3_core"
doctest = false

[dependencies]
bigdecimal = "0.4"
chrono = { version = "0.4", features = ["serde"] }
num-bigint = "0.4"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
